@@ -6,6 +6,7 @@ import java.awt.HeadlessException;
 import java.io.Serial;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import javax.swing.*;
 
@@ -44,7 +45,7 @@ public class ViewFrame extends JFrame {
     /**
      * List of panels for all levels.
      */
-    public static List<LevelPanel> panels = getLevels();
+    public static final List<LevelPanel> panels = getLevels();
 
 
     /**
@@ -159,8 +160,7 @@ public class ViewFrame extends JFrame {
     public static List<LevelPanel> getLevels() {
         DAOLevel dao = new DAOLevel();
         List<Map<String, Integer>> levelsData = dao.getLevelsData();
-        levelsData = List.of(levelsData.get(1));
-        return levelsData.stream().map(map -> new LevelPanel(new Level(map.get("level"), 5), map.get("diamond_count"), new ExitDoor(map.get("exitX"), map.get("exitY")), new Dash(map.get("dashX"), map.get("dashY")), map.get("game_duration"))).toList();
+        return levelsData.stream().map(map -> new LevelPanel(new Level(map.get("level"), levelsData.size()), map.get("diamond_count"), new ExitDoor(map.get("exitX"), map.get("exitY")), new Dash(map.get("dashX"), map.get("dashY")), map.get("game_duration"))).collect(Collectors.toList());
     }
 
 
